--- a/style.css
+++ b/style.css
@@ -38,10 +38,18 @@ a, a:focus, a:active {
   background-image: -o-linear-gradient(top left, #485069 0%, #33394D 100%);
   background-image: linear-gradient(to bottom right, #485069 0%, #33394D 100%);
 
-  height: 500px;
+  height: auto;
   padding-top: 60px;
   text-align: center;
   position: relative;
+
+}
+
+.featured-image {
+  display: block;
+  margin: 20px auto 0;
+  width: 100%;
+  max-width: 836px;
 }
 
 .top:after {
@@ -49,13 +57,11 @@ a, a:focus, a:active {
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 219px;
-  width: 100%;
-  background: url(images/featured.png) no-repeat;
-  background-size: contain;
-  background-position: bottom center;
+  right: 0;
+  top: 0;
+  pointer-events: none;
 
-  box-shadow: inset 0 -10px 20px -10px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 -10px 20px -10px rgba(0, 0, 0, 0.08);
 }
 
 .logo {
@@ -150,6 +156,17 @@ p {
   height: 36px;
 }
 
+
+/**
+ * FOOTER
+ */
+
+footer {
+  background-image: -webkit-linear-gradient(top left, #485069 0%, #33394D 100%);
+  background-image: -o-linear-gradient(top left, #485069 0%, #33394D 100%);
+  background-image: linear-gradient(to bottom right, #485069 0%, #33394D 100%);
+}
+
 /**
  * CHANGES FOR DESKTOP/TABLES
  */
@@ -160,14 +177,6 @@ p {
 
   h1 {
     font: 600 36px "proxima-nova-condensed";
-  }
-
-  .top {
-    height: 700px;
-  }
-
-  .top:after {
-    height: 438px;
   }
 
   h2 {
