--- a/style.css
+++ b/style.css
@@ -91,6 +91,14 @@ h1 {
   padding: 0 70px;
   background: #FCAB52;
   letter-spacing: 0.5px;
+
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.button:hover {
+  background: #03AADB
 }
 
 /**
@@ -165,6 +173,73 @@ footer {
   background-image: -webkit-linear-gradient(top left, #485069 0%, #33394D 100%);
   background-image: -o-linear-gradient(top left, #485069 0%, #33394D 100%);
   background-image: linear-gradient(to bottom right, #485069 0%, #33394D 100%);
+
+  padding: 60px 0;
+  text-align: center;
+}
+
+footer a {
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+footer a:hover {
+  opacity: 1;
+}
+
+.social {
+  margin-bottom: 30px;
+}
+
+.social a {
+  display: inline-block;
+  height: 32px;
+  width: 32px;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  opacity: 0.5;
+}
+
+.social .twitter { background-image: url(images/twitter.png); }
+.social .github { background-image: url(images/github.png); margin-right: 60px; }
+
+.credits {
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
+.credits a {
+  margin-right: 20px;
+  color: white;
+  opacity: 0.5;
+}
+
+.love {
+  color: white;
+  font-size: 12px;
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+.love-icon, .us-icon {
+  height: 15px;
+  width: 16px;
+  background-image: url(images/heart.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: inline-block;
+  margin: 0 5px;
+  position: relative;
+  top: 2px;
+}
+
+.us-icon {
+  width: 20px;
+  background-image: url(images/us.png);
 }
 
 /**
@@ -252,6 +327,31 @@ footer {
     width: 33.33%;
     padding: 30px 0;
   }
+
+
+  footer .container {
+    -webkit-display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    display: flex;
+
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    align-items: center;
+  }
+
+  footer .container > div {
+    -webkit-flex: 1;
+    -moz-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+
+  .social { margin-bottom: 0 }
+  .credits { text-align: left; margin: 0 }
+  .love { text-align: right; }
+
 }
 
 
