--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ a, a:focus, a:active {
   text-align: center;
   position: relative;
 
+  overflow: hidden;
 }
 
 .featured-image {
@@ -50,6 +51,9 @@ a, a:focus, a:active {
   margin: 20px auto 0;
   width: 100%;
   max-width: 836px;
+
+  opacity: 0;
+  animation: slide-up 0.4s ease 0.6s 1 normal forwards;
 }
 
 .top:after {
@@ -72,11 +76,17 @@ a, a:focus, a:active {
   background: url(images/logo.png) no-repeat;
   background-size: contain;
   transform: scale(0.8);
+
+  opacity: 0;
+  animation: slide-up 0.4s ease 0.3s 1 normal forwards;
 }
 
 h1 {
   color: white;
   font: 400 28px "proxima-nova-condensed";
+
+  opacity: 0;
+  animation: slide-up 0.4s ease 0.4s 1 normal forwards;
 }
 
 .button {
@@ -95,11 +105,26 @@ h1 {
   -webkit-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
   transition: all 0.4s ease;
+
+  opacity: 0;
+  animation: slide-up 0.4s ease 0.5s 1 normal forwards;
 }
 
 .button:hover {
   background: #03AADB
 }
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 
 /**
  * FEATURES SECTION
