--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ a, a:focus, a:active {
   outline: none;
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .container {
   max-width: 960px;
   margin: 0 auto;
@@ -53,7 +57,7 @@ a, a:focus, a:active {
   max-width: 836px;
 
   opacity: 0;
-  animation: slide-up 0.4s ease 0.6s 1 normal forwards;
+  animation: slide-up 0.6s ease 0.6s 1 normal forwards;
 }
 
 .top:after {
@@ -78,15 +82,15 @@ a, a:focus, a:active {
   transform: scale(0.8);
 
   opacity: 0;
-  animation: slide-up 0.4s ease 0.3s 1 normal forwards;
+  animation: slide-up 0.6s ease 0.3s 1 normal forwards;
 }
 
 h1 {
   color: white;
-  font: 400 28px "proxima-nova-condensed";
+  font: 400 28px 'Oswald', sans-serif;
 
   opacity: 0;
-  animation: slide-up 0.4s ease 0.4s 1 normal forwards;
+  animation: slide-up 0.6s ease 0.4s 1 normal forwards;
 }
 
 .button {
@@ -107,7 +111,7 @@ h1 {
   transition: all 0.4s ease;
 
   opacity: 0;
-  animation: slide-up 0.4s ease 0.5s 1 normal forwards;
+  animation: slide-up 0.6s ease 0.5s 1 normal forwards;
 }
 
 .button:hover {
@@ -132,7 +136,7 @@ h1 {
 
 h2 {
   color: #485069;
-  font: 600 24px "proxima-nova-condensed";
+  font: 400 24px 'Oswald', sans-serif;
   text-align: center;
   padding: 40px 0;
 }
@@ -152,7 +156,7 @@ h2 {
 }
 
 h3 {
-  font: 600 24px "proxima-nova-condensed";
+  font: 400 24px 'Oswald', sans-serif;
   color: #31374A;
 }
 
@@ -276,23 +280,23 @@ footer a:hover {
   }
 
   h1 {
-    font: 600 36px "proxima-nova-condensed";
+    font: 400 36px 'Oswald', sans-serif;
   }
 
   h2 {
-    font: 600 32px "proxima-nova-condensed";
+    font: 400 32px 'Oswald', sans-serif;
     padding: 60px 0;
   }
 
   h3 {
-    font: 600 28px "proxima-nova-condensed";
+    font: 400 28px 'Oswald', sans-serif;
     color: #31374A;
     line-height: 42px;
   }
 
   p {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 27px;
   }
 
